[project]
name = "comfyui-deadline-distributed"
version = "1.0.0"
description = "Distributed image generation for ComfyUI with Thinkbox Deadline integration (master/worker via render farm)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dominik Bargiel", email = "dominikbargiel97@gmail.com" }
]
keywords = [
    "comfyui",
    "deadline",
    "distributed",
    "render-farm",
    "workflow",
    "plugin"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.8"

# Ensure the base Deadline submission plugin is installed first
dependencies = [
    "comfyui-deadline-plugin>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/doubletwisted/ComfyUI-Deadline-Distributed"

# Comfy Registry metadata
[tool.comfy]
PublisherId = "doubletwisted"
DisplayName = "ComfyUI-Deadline-Distributed"
Icon = ""
